--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -15,9 +15,9 @@
 
     <string name="password_weak">再长一点 &#8230;</string>
     <string name="password_fair">嗯 &#8230;</string>
-    <string name="password_good">加油, 你可以做得更好!</string>
+    <string name="password_good">加油，你可以做得更好！</string>
     <string name="password_strong">快了快了 &#8230;</string>
-    <string name="password_very_strong">厉害, h4x0r 风格!</string>
+    <string name="password_very_strong">厉害，h4x0r 风格！</string>
 
     <string name="label_login_wallets">钱包</string>
     <string name="label_credits">致谢</string>
@@ -32,56 +32,56 @@
     <string name="label_receive_info_gen_qr_code">点选显示QR码</string>
     <string name="info_send_prio_fees">较高优先权 = 较高手续费</string>
 
-    <string name="info_xmrto_enabled">BTC付款已启用, 点选我获得更多信息</string>
-    <string name="info_crazypass_enabled">CrAzYpass已启用, 点选我获得更多信息</string>
+    <string name="info_xmrto_enabled">BTC付款已启用, 点选了解更多</string>
+    <string name="info_crazypass_enabled">CrAzYpass已启用, 点选了解更多</string>
 
     <string name="info_xmrto"><![CDATA[
-        <b>你已输入Bitcoin地址</b><br/>
-        <i>你将会发送XMR而收款方将会收到BTC(由<b>XMR.TO</b>提供转換)</i>
+        <b>你输入了Bitcoin地址</b><br/>
+        <i>你将会发送XMR而收款方将会收到BTC(由 <b>XMR.TO</b> 提供转換)</i>
     ]]></string>
 
-    <string name="info_send_xmrto_success_order_label">XMR.TO订单</string>
+    <string name="info_send_xmrto_success_order_label">XMR.TO 订单</string>
 
     <string name="info_send_xmrto_success_btc">%1$s BTC</string>
 
     <string name="info_send_xmrto_paid">等待确认中</string>
     <string name="info_send_xmrto_unpaid">等待付款中</string>
-    <string name="info_send_xmrto_error">XMR.TO发生错误(%1$s)</string>
-    <string name="info_send_xmrto_sent">BTC已发送!</string>
+    <string name="info_send_xmrto_error">XMR.TO 发生错误(%1$s)</string>
+    <string name="info_send_xmrto_sent">BTC 已发送!</string>
     <string name="info_send_xmrto_query">查询中 &#8230;</string>
 
     <string name="info_send_xmrto_parms"><![CDATA[
         <b>你可发送 %1$s &#8212; %2$s BTC</b>.<br/>
-        <i><b>XMR.TO</b>提供的汇率为<b>%3$s BTC</b> <u>(即时)</u></i>.
+        <i><b>XMR.TO</b>提供的<u>即时</u>汇率为<b>%3$s BTC</b></i>.
     ]]></string>
     <string name="info_send_xmrto_zeroconf"><![CDATA[
-        <i>金额若小于<b>%1$s BTC</b>将可以<u>零确认发送</u>!</i>
+        <i>金额少于<b>%1$s BTC</b>，将可以<u>馬上</u>发送!</i>
     ]]></string>
 
-    <string name="send_available_btc">余额: %2$s BTC (%1$s XMR)</string>
+    <string name="send_available_btc">余额： %2$s BTC (%1$s XMR)</string>
 
-    <string name="info_paymentid_intergrated">付款ID已嵌入</string>
+    <string name="info_paymentid_intergrated">已加入付款ID</string>
     <string name="info_prepare_tx">正在准备你的交易</string>
 
     <string name="label_send_progress_xmrto_create">建立 XMR.TO 订单</string>
     <string name="label_send_progress_xmrto_query">查询 XMR.TO 订单</string>
     <string name="label_send_progress_create_tx">正在准备 Monero 交易</string>
 
-    <string name="label_send_progress_queryparms">正在查询 xmr.to 参数</string>
+    <string name="label_send_progress_queryparms">正在查询 XMR.TO 参数</string>
 
     <string name="label_generic_xmrto_error">XMR.TO 发生错误</string>
     <string name="text_generic_xmrto_error">错误代码: %1$d</string>
 
     <string name="text_retry">点选以重试</string>
     <string name="text_noretry_monero">我们卡住了!</string>
-    <string name="text_noretry">噢不, XMR.TO 现在似乎无法提供服务!</string>
+    <string name="text_noretry">不好, XMR.TO 现在似乎无法提供服务!</string>
 
     <string name="text_send_btc_amount">%1$s BTC = %2$s XMR</string>
     <string name="text_send_btc_rate">(汇率: %1$s BTC/XMR)</string>
 
-    <string name="label_send_settings_advanced">高级选项:</string>
+    <string name="label_send_settings_advanced">高级选项：</string>
 
-    <string name="label_send_btc_xmrto_info">参访 xmr.to 以支持 &amp; 追踪</string>
+    <string name="label_send_btc_xmrto_info">参访 xmr.to 以获得支援及追踪交易</string>
     <string name="label_send_btc_xmrto_key_lb">私钥\nXMR.TO</string>
     <string name="label_send_btc_xmrto_key">XMR.TO 私钥</string>
     <string name="label_send_btc_address">目的地 BTC 地址</string>
@@ -92,13 +92,13 @@
     <string name="label_send_payment_id">付款ID</string>
     <string name="label_send_notes">附注</string>
 
-    <string name="backup_progress">正在备份中</string>
-    <string name="archive_progress">正在封存中</string>
-    <string name="rename_progress">正在重新命名</string>
-    <string name="open_progress">正在检查daemon连网</string>
-    <string name="changepw_progress">正在更改密码中</string>
+    <string name="backup_progress">备份中</string>
+    <string name="archive_progress">封存中</string>
+    <string name="rename_progress">重新命名中</string>
+    <string name="open_progress">检查背景程序连网中</string>
+    <string name="changepw_progress">更改密码中</string>
 
-    <string name="service_progress">正在关闭钱包 &#8230;\n可能会花费些許时间!</string>
+    <string name="service_progress">处理中 &#8230;\n可能会花费一点时间！</string>
 
     <string name="backup_failed">备份失败!</string>
     <string name="archive_failed">封存失败!</string>
@@ -107,23 +107,23 @@
     <string name="changepw_success">密码更改成功</string>
 
     <string name="label_daemon">节点</string>
-    <string name="prompt_daemon">([&lt;名称&gt;:&lt;密码&gt;@]&lt;节点&gt;[:&lt;port&gt;])</string>
-    <string name="status_wallet_loading">载入钱包 &#8230;</string>
+    <string name="prompt_daemon">([&lt;使用者&gt;:&lt;密码&gt;@]&lt;位置&gt;[:&lt;port&gt;])</string>
+    <string name="status_wallet_loading">载入钱包中 &#8230;</string>
     <string name="status_wallet_unloaded">钱包已储存</string>
     <string name="status_wallet_unload_failed">储存钱包失败!</string>
     <string name="status_wallet_connecting">连接中 &#8230;</string>
-    <string name="status_wallet_connect_failed">连接至节点失败!\n请检查名称/密码。</string>
+    <string name="status_wallet_connect_failed">连接至节点失败!\n请检查使用者/密码。</string>
     <string name="status_wallet_connect_timeout">节点连接逾时!\n请重试或更換节点。</string>
     <string name="status_wallet_node_invalid">节点无效!\n请试试其他节点。</string>
     <string name="status_wallet_connect_ioex">无法连接至节点!\n请试试其他节点。</string>
 
-    <string name="status_wallet_disconnected">中断连接</string>
+    <string name="status_wallet_disconnected">连接中断</string>
 
     <string name="status_transaction_failed">交易失败: %1$s</string>
 
     <string name="send_xmrto_timeout">等待时间过长!</string>
 
-    <string name="service_busy">前一个钱包尚未处理完毕 &#8230;</string>
+    <string name="service_busy">正在处理前一个钱包 &#8230;</string>
 
     <string name="prompt_rename">重新命名 %1$s</string>
 
@@ -134,10 +134,10 @@
     <string name="prompt_send_password">确认密码</string>
     <string name="prompt_open_wallet">[Opening the wallet&#8230;]</string>
     <string name="bad_fingerprint">无法识别指纹，请再试一次。</string>
-    <string name="bad_password">密码错误!</string>
+    <string name="bad_password">密码错误！</string>
     <string name="bad_saved_password">[Saved password is incorrect.\nPlease enter password manually.]</string>
     <string name="bad_wallet">钱包不存在!</string>
-    <string name="prompt_daemon_missing">必需要设定节点位置!</string>
+    <string name="prompt_daemon_missing">必須设定节点位置！</string>
     <string name="prompt_wrong_net">钱包不符合选择的网络</string>
 
     <string name="label_watchonly">(只读)</string>
@@ -149,24 +149,24 @@
 
     <string name="service_description">monerujo 服务</string>
 
-    <string name="status_synced">已同步区块:</string>
+    <string name="status_synced">已同步区块：</string>
     <string name="status_remaining">剩余区块</string>
-    <string name="status_syncing">扫描中:</string>
+    <string name="status_syncing">扫描中：</string>
 
-    <string name="message_strorage_not_writable">外部储存空间无法写入!</string>
-    <string name="message_strorage_not_permitted">我们真的很需要你的外部储存空间权限!</string>
-    <string name="message_camera_not_permitted">沒有相机 = 无法使用QR码扫描!</string>
+    <string name="message_strorage_not_writable">外部储存空间无法写入！</string>
+    <string name="message_strorage_not_permitted">我们真的很需要你的外部储存空间权限！</string>
+    <string name="message_camera_not_permitted">沒有相机 = 无法扫描QR码!</string>
 
     <string name="label_copy_viewkey">查看密钥</string>
     <string name="label_copy_address">公开地址</string>
     <string name="label_copy_xmrtokey">XMR.TO 密钥</string>
-    <string name="message_copy_viewkey">查看密钥已复制至剪贴簿!</string>
-    <string name="message_copy_xmrtokey">XMR.TO 密钥已复制至剪贴簿!</string>
-    <string name="message_copy_address">钱包地址已复制至剪贴簿!</string>
-    <string name="message_copy_txid">交易ID 已复制至剪贴簿!</string>
-    <string name="message_nocopy">因安全性因素已停用复制功能!</string>
+    <string name="message_copy_viewkey">查看密钥已复制至剪贴簿！</string>
+    <string name="message_copy_xmrtokey">XMR.TO 密钥已复制至剪贴簿！</string>
+    <string name="message_copy_address">钱包地址已复制至剪贴簿！</string>
+    <string name="message_copy_txid">交易ID 已复制至剪贴簿！</string>
+    <string name="message_nocopy">因安全性因素已停用复制功能！</string>
 
-    <string name="message_exchange_failed">无法取得汇率!\n使用 XMR/XMR 或重试</string>
+    <string name="message_exchange_failed">无法取得汇率！\n使用 XMR/XMR 或重试</string>
 
     <string name="generate_title">建立钱包</string>
     <string name="generate_name_hint">钱包名称</string>
@@ -174,21 +174,21 @@
     <string name="generate_fingerprint_hint">允许使用指纹开启钱包</string>
     <string name="generate_fingerprint_warn"><![CDATA[
         <strong>指纹验证</strong>
-        <p>启用指纹验证后，您可以观看钱包余额并接受资金，而无需输入密码。</p>
-        <p>但为了提高安全性，monerujo 仍然会要求您在观看钱包详细信息或发送资金时输入密码。</p>
+        <p>启用指纹验证后，无需输入密码，就可以查看钱包余额并接收资金。</p>
+        <p>但为安全起见，查看钱包详细资讯或发送资金时，仍须输入密码。</p>
         <strong>安全警告</strong>
-        <p>最后，monerujo 想提醒您，任何可以取得您指紋的人，都能够窥视您的钱包余额。</p>
-        <p>例如，您周遭的恶意使用者可以趁您睡着时，使用您的指紋开启钱包。</p>
+        <p>最后，monerujo 提醒您，任何可以取得您指紋的人，都能够窥视您的钱包余额。</p>
+        <p>例如，您身边的恶意使用者可以趁您睡着时使用您的指纹开启钱包。</p>
         <strong>您确定要启用本功能吗？</strong>
     ]]></string>
     <string name="generate_bad_passwordB">密码不符</string>
     <string name="generate_empty_passwordB">密码不得空白</string>
-    <string name="generate_buttonGenerate">建立钱包!</string>
-    <string name="generate_button_accept">我已抄写以上信息!</string>
+    <string name="generate_buttonGenerate">建立钱包！</string>
+    <string name="generate_button_accept">我已抄写种子码</string>
 
-    <string name="generate_wallet_name">取个名称!</string>
-    <string name="generate_wallet_exists">钱包已存在!</string>
-    <string name="generate_wallet_dot">无法使用以.作为开头</string>
+    <string name="generate_wallet_name">取个名称！</string>
+    <string name="generate_wallet_exists">钱包已存在！</string>
+    <string name="generate_wallet_dot">无法使用.作为开头</string>
     <string name="generate_wallet_creating">建立钱包</string>
     <string name="generate_wallet_created">钱包已建立</string>
     <string name="generate_wallet_create_failed">钱包建立失败</string>
@@ -216,7 +216,7 @@
     <string name="generate_check_address">输入有效的地址</string>
     <string name="generate_check_mnemonic">输入你的25字种子码</string>
 
-    <string name="send_amount_btc_xmr">%1$s (指示)</string>
+    <string name="send_amount_btc_xmr">%1$s (参考价)</string>
 
     <string name="send_address_hint">收款者的 XMR 或 BTC 地址</string>
     <string name="send_paymentid_hint">付款ID (选填)</string>
@@ -224,8 +224,8 @@
     <string name="send_notes_hint">注记 (选填)</string>
     <string name="send_generate_paymentid_hint">产生</string>
     <string name="send_qr_hint">扫描</string>
-    <string name="send_send_label">发送我的 Moneroj</string>
-    <string name="send_send_timed_label">发送我的 Moneroj (%1$s)</string>
+    <string name="send_send_label">发送我的 Monero</string>
+    <string name="send_send_timed_label">发送我的 Monero (%1$s)</string>
     <string name="send_qr_invalid">这不是QR码</string>
     <string name="send_qr_address_invalid">这不是有效的付款QR码</string>
     <string name="send_address_invalid">这不是有效的地址</string>
@@ -255,8 +255,8 @@
     <string name="tx_list_amount_positive">+ %1$s</string>
 
     <string name="tx_timestamp">时间戳记</string>
-    <string name="tx_id">TX ID</string>
-    <string name="tx_key">TX密钥</string>
+    <string name="tx_id">交易ID (TXID)</string>
+    <string name="tx_key">TX密钥 (TX Key)</string>
     <string name="tx_destination">收款地址</string>
     <string name="tx_destination_btc">收款地址\n(BTC)</string>
     <string name="tx_paymentId">付款ID</string>
@@ -276,24 +276,24 @@
 
     <string name="receive_paymentid_hint">付款ID (选填)</string>
     <string name="receive_amount_hint">金额</string>
-    <string name="receive_cannot_open">无法开启钱包!</string>
+    <string name="receive_cannot_open">无法开启钱包！</string>
     <string name="receive_paymentid_invalid">16 或 64 Hex 字元 (0&#8211;9,a&#8211;f)</string>
     <string name="receive_integrated_paymentid_invalid">使用整合地址时必须为空白</string>
 
     <string name="receive_amount_too_big">最大值 %1$s</string>
     <string name="receive_amount_negative">最小值 0</string>
-    <string name="receive_amount_nan">输入的XMR不是个数字</string>
+    <string name="receive_amount_nan">输入的XMR不是数字</string>
 
     <string name="receive_title">接收</string>
 
     <string name="details_alert_message">将会选示敏感信息。\n请注意周遭安全!</string>
     <string name="details_alert_yes">我现在很安全</string>
-    <string name="details_alert_no">不看了!</string>
+    <string name="details_alert_no">不看了！</string>
     <string name="details_title">详细信息</string>
 
     <string name="archive_alert_message">钱包档案案将会被备份并且于列表中刪除!</string>
-    <string name="archive_alert_yes">好的!</string>
-    <string name="archive_alert_no">不了!</string>
+    <string name="archive_alert_yes">好的！</string>
+    <string name="archive_alert_no">不了！</string>
 
     <string-array name="priority">
         <item>预设优先权</item>
@@ -307,12 +307,12 @@
     <string name="fab_restore_key">从私钥恢复钱包</string>
     <string name="fab_restore_seed">从25字种子码恢复钱包</string>
 
-    <string name="accounts_drawer_new">Create Account</string>
-    <string name="accounts_drawer_title">Accounts</string>
-    <string name="accounts_new">Added new account #%1$d</string>
-    <string name="tx_account">Account #</string>
+    <string name="accounts_drawer_new">开新户口</string>
+    <string name="accounts_drawer_title">户口</string>
+    <string name="accounts_new">已新增户口 #%1$d</string>
+    <string name="tx_account">户口 #</string>
 
-    <string name="send_sweepall">Send all confirmed funds in this account!</string>
-    <string name="tx_subaddress">Subaddress #%1$d</string>
-    <string name="generate_address_label_sub">Public Subaddress #%1$d</string>
+    <string name="send_sweepall">发送这个户口的所有已确认款项！</string>
+    <string name="tx_subaddress">附属地址 #%1$d</string>
+    <string name="generate_address_label_sub">附属公开地址 #%1$d</string>
 </resources>
