--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -175,7 +175,7 @@
     <string name="send_notes_hint">Notes Privées (optionnelles)</string>
     <string name="send_generate_paymentid_hint">Générer</string>
     <string name="send_qr_hint">Scanner</string>
-    <string name="send_send_label">Dépenser mes beaux Moneroj</string>
+    <string name="send_send_label">Dépenser mes beaux Aeon</string>
     <string name="send_qr_invalid">QR Code invalide</string>
     <string name="send_qr_address_invalid">QR code de paiement invalide</string>
     <string name="send_address_invalid">Adresse invalide</string>
@@ -230,8 +230,6 @@
     <string name="receive_amount_negative">Min. 0</string>
     <string name="receive_amount_nan">AEON pas un nombre</string>
 
-    <string name="receive_title">Recevoir</string>
-
     <string name="details_alert_message">Des données sensible vont être affichées.\nRegardez autour de vous !</string>
     <string name="details_alert_yes">C\'est bon</string>
     <string name="details_alert_no">Non merci !</string>
@@ -254,7 +252,6 @@
     <string name="fab_restore_seed">Restaurer un portefeuille depuis la phrase mnémonique</string>
 
     <string name="accounts_drawer_new">Créer un Compte</string>
-    <string name="accounts_drawer_title">Comptes</string>
     <string name="accounts_new">Nouveau Compte #%1$d ajouté</string>
     <string name="tx_account">Compte #</string>
 
