--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -173,7 +173,7 @@
     <string name="send_notes_hint">Privat notat (valgfritt)</string>
     <string name="send_generate_paymentid_hint">Generer</string>
     <string name="send_qr_hint">Skann</string>
-    <string name="send_send_label">Bruk mine søte moneroj</string>
+    <string name="send_send_label">Bruk mine søte Aeon</string>
     <string name="send_qr_invalid">Ikke en QR-kode</string>
     <string name="send_qr_address_invalid">Ikke en gyldig betalings-QR-kode</string>
     <string name="send_address_invalid">Ikke en gyldig adresse</string>
@@ -228,8 +228,6 @@
     <string name="receive_amount_negative">Min. 0</string>
     <string name="receive_amount_nan">AEON ikke et tall</string>
 
-    <string name="receive_title">Motta</string>
-
     <string name="details_alert_message">Sensitive data vil nå bli vist.\nSe over skulderen din!</string>
     <string name="details_alert_yes">Jeg er trygg</string>
     <string name="details_alert_no">Ta meg tilbake!</string>
@@ -252,7 +250,6 @@
     <string name="fab_restore_seed">Gjenoprett lommebok fra 25-ord seed</string>
 
     <string name="accounts_drawer_new">Create Account</string>
-    <string name="accounts_drawer_title">Accounts</string>
     <string name="accounts_new">Added new account #%1$d</string>
     <string name="tx_account">Account #</string>
 
